# omega-sheath-os

./: .gitignore  Cargo.toml  README.md  SYSTEM_STATUS.md
artifacts/: manifest.template.json
configs/: predicate_catalog.json
crates/omega-cli/: Cargo.toml
crates/omega-cli/src/: main.rs
crates/omega-core/: Cargo.toml
crates/omega-core/src/: cert.rs  checker.rs  lib.rs  log.rs  metrics.rs  model.rs  reconcile.rs  replay.rs
crates/omega-core/tests/: checker_tests.rs  log_tests.rs  reconcile_tests.rs
docs/: 02-formal-model.md  03-runtime-design.md
examples/: events.json  sample.omega  snapshot.json
layers/elixir/runtime/: mix.exs
layers/elixir/runtime/""/tmp/omega-elixirc.8kmGcm""/: Elixir.OmegaRuntime.Application.beam  Elixir.OmegaRuntime.CertificateActor.beam  Elixir.OmegaRuntime.IngressActor.beam  Elixir.OmegaRuntime.ReconcileCoordinator.beam  Elixir.OmegaRuntime.ReplayActor.beam  Elixir.OmegaRuntime.SequencerActor.beam  Elixir.OmegaRuntime.SnapshotActor.beam
layers/elixir/runtime/""/tmp/omega-elixirc.hR8J9w""/: Elixir.OmegaRuntime.CertificateActor.beam  Elixir.OmegaRuntime.CheckerGateway.beam  Elixir.OmegaRuntime.MetricsActor.beam  Elixir.OmegaRuntime.SnapshotActor.beam  Elixir.OmegaRuntime.beam
layers/elixir/runtime/lib/: omega_runtime.ex
layers/elixir/runtime/lib/omega_runtime/: application.ex  certificate_actor.ex  checker_gateway.ex  ingress_actor.ex  metrics_actor.ex  reconcile_coordinator.ex  replay_actor.ex  sequencer_actor.ex  snapshot_actor.ex
layers/elixir/runtime/test/: omega_runtime_test.exs
layers/futhark/: kernels.fut
layers/lean4/: lake-manifest.json  lakefile.lean
layers/lean4/Formal/: OMEGA.lean
layers/nushell/: pipeline.nu
layers/pony/runtime/: main.pony
layers/tla/: OMEGA.cfg  OMEGA.tla
layers/zig/: build.zig
layers/zig/src/: cert_store.zig  lib.zig
schemas/: certificate.schema.json  event.schema.json  omega.capnp
scripts/: build_all.sh  check_architecture.sh  feed_live_data.exs  make_sample_log.sh  smoke.sh  start_command_center.sh
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  index.css
(+2 files in other folders)
