[package]
name = "omega-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "omega"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
blake3.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
omega-core = { path = "../omega-core" }
